--- a/Rebased/home/src/main/res/values/strings.xml
+++ b/Rebased/home/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">FlickrViewer</string>
-    <string name="action_refresh">Refresh</string>
     <string name="header_main">Recent Flickr Photos</string>
     <string name="header_explain1">View the most recent photos that Flickr</string>
     <string name="header_explain2">users have uploaded.</string>
@@ -13,4 +12,8 @@
     <string name="onWeb">View on Flickr</string>
     <string name="title_flickrphoto_detail">Detail View</string>
 
+    <string name="action_search">Search</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_shared_dialog">Login</string>
+    <string name="action_favorite">Favorite</string>
 </resources>
